<resources>
    <string name="app_name">MyApp</string>
    <string name="my_name">Welcome </string>
    <string name="welcome_tab">Back</string>
    <string name="my_button">Button</string>
    <string name="divide">/</string>
    <string name="modulus">%</string>
    <string name="more">+/-</string>
    <string name="clear">C</string>
    <string name="multiple">X</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="sub">-</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="four">4</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="add">+</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="three">3</string>
</resources>